crates/strider-analyze/tests/snapshots/mips64le__switch__dispatch_value.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="IndirectBranch", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "4" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xfffffffffffffffe:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "5" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "6" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x100000000000184d8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="init\nt9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x7:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xd20:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x10000000000010518:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "22" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "10" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
}
